--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -18,6 +18,8 @@
     <script src="../gfx/gfx-scene.js"></script>
     <script src="../gfx/Julian.js"></script>
     <script src="../gfx/Carto.js"></script>
+    <script src="../gfx/arc.js"></script>
+    <script src="../gfx/GreatCircle.js"></script>
     <script src="MetParm.js"></script>
     <script src="StormParm.js"></script>
     <script src="StormFile.js"></script>
@@ -35,8 +37,6 @@
     var entryLabels = undefined;
     var options = undefined;
 
-    //var gui = undefined;
-
     // allocate the Scene object, request orbitControls, some of 3D axes 10 units high and the stats
     var gfxScene = new GFX.Scene( {
         cameraPos : [4, 3, 4],
@@ -45,12 +45,31 @@
         guiWidth:500,
         displayStats:true});
 
+    testArc();
 
     // then initialize our demo's stuff
     initializeDemo();
 
     // temporary...
     animateScene();
+
+    function testArc() {
+        var start = { x: -122, y: 48 };
+        var end   = { x: -77, y: 39 };
+        var startLL = { lat: 48, lon: -122 };
+        var endLL = { lat: 39, lon: -77 };
+
+        var generator = new arc.GreatCircle(start, end, {'name': 'Seattle to DC'});
+
+        var line = generator.Arc(100,{offset:10});
+
+        var lineJSON = line.json();
+        var lineWKT  = line.wkt();
+
+        var gcGen = new GreatCircle.GreatCircle( startLL, endLL, {'name': 'Seattle to DC'});
+
+        var points = gcGen.generateArc(100, { offset:10 });
+    }
 
     /**
      * Initialize the Demo.
