--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -66,7 +66,7 @@
         var lineJSON = line.json();
         var lineWKT  = line.wkt();
 
-        var gcGen = new GreatCircle.GreatCircle( startLL, endLL, {'name': 'Seattle to DC'});
+        var gcGen = new GreatCircle( startLL, endLL, {'name': 'Seattle to DC'});
 
         var points = gcGen.generateArc(100, { offset:10 });
     }
