Added scale factor to projection function, refactored GreatCircle to not work through the constructor and added plotTrack to HurrDemo. Almost works.

--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -21,20 +21,22 @@
     <script src="../gfx/GreatCircle.js"></script>
     <script src="MetParm.js"></script>
     <script src="StormParm.js"></script>
+    <script src="StormData.js"></script>
     <script src="StormFile.js"></script>
     <script src="HurrModel.js"></script>
 </head>
 <body>
 
 <script>
-    var hurrModel = undefined;
-    var stormFile = new StormFile();
-    var curStorm  = undefined;
-    var years = undefined;
-    var storms = undefined;
+    var hurrModel   = undefined;
+    var stormFile   = new StormFile();
+    var curStorm    = undefined;
+    var years       = undefined;
+    var storms      = undefined;
     var stormLabels = undefined;
     var entryLabels = undefined;
-    var options = undefined;
+    var options     = undefined;
+    var carto = new Carto();
 
     // allocate the Scene object, request orbitControls, some of 3D axes 10 units high and the stats
     var gfxScene = new GFX.Scene( {
@@ -44,9 +46,7 @@
         guiWidth:500,
         displayStats:true});
 
-    testFoo();
-
-    testArc();
+    //testArc();
 
     // then initialize our demo's stuff
     initializeDemo();
@@ -58,9 +58,9 @@
         var startLL = { lat: 48, lon: -122 };
         var endLL = { lat: 39, lon: -77 };
 
-        var gcGen = new GreatCircle( startLL, endLL, {'name': 'Seattle to DC'});
+        var gcGen = new GreatCircle();
 
-        var points = gcGen.generateArc(100, { offset:10 });
+        var points = gcGen.generateArc( startLL, endLL, 100, { offset:10, 'name': 'Seattle to DC' });
     }
 
     /**
@@ -75,12 +75,15 @@
         // just the executable model itself
         hurrModel = new HurrModel({
 
-            renderFunc: renderFunc
+            renderFunc: renderHurricane
         });
 
         loadStorms( stormReady );
     }
 
+    /**
+     * Load all the storms in the specified file, parsing them into JSON
+     */
     function loadStorms() {
 
         stormFile = new StormFile();
@@ -88,13 +91,16 @@
         stormFile.loadData( "hurdat2-1851-2016-041117.json", stormReady );
     }
 
+    /**
+     * Call back from HTTPRequest when data has been loaded
+     */
     function stormReady() {
-
-        curStorm = stormFile.getJSON();
-
         setupDatGui();
     }
 
+    /**
+     *  Initialize the current model run and kick it off
+     */
     function runStorm() {
         hurrModel.initArrays();
         hurrModel.initialise();
@@ -103,6 +109,9 @@
         animateScene();
     }
 
+    /**
+     * Create the sphere mesh and wrap it with the image
+     */
     function createGlobe () {
         var globe = new THREE.SphereGeometry(2, 32, 32);
 
@@ -115,6 +124,55 @@
             var mesh = new THREE.Mesh(globe, mat);
             gfxScene.add(mesh);
         } );
+    }
+
+    /**
+     * Plot the current storm track by fetching the set of positions and creating
+     * great-circle arcs for each and creating a curve in threee.js for them.
+     *
+     * The procedure is:
+     * - iterate over the storm track entries
+     * - for each pair of points
+     * - calculate the great circle arc, which returns an array of lat/lon [n][2]
+     * - generate the transform of that array into scaled 3D-space as an array of Vector3
+     * - generate a CatMullCurve using three.js
+     * - generate a tube geometry using that curve, returns the resulting geometry
+     */
+    function plotStormTrack() {
+        var gcGen = new GreatCircle();
+        var points;
+        var startLL = { lat: curStorm.entries[0][STORMDATA.LAT], lon: curStorm.entries[0][STORMDATA.LON] };
+        var endLL   = {};
+        var scale = 2 / CARTO.EARTH_DIAMETER;
+        var xyz;
+        var arcMesh;
+        var arcMat = new THREE.MeshPhongMaterial({color: 0xc0c0c0, shininess:50});
+
+        for ( var i=1; i<curStorm.entries.length; i++ ) {
+            endLL = { lat: curStorm.entries[i][STORMDATA.LAT], lon: curStorm.entries[i][STORMDATA.LON] };
+
+            points = gcGen.generateArc( startLL, endLL, 10, { offset:10 } );
+
+            var pts = points[0];
+            var helix = [];
+
+            for ( var j=0; j<pts.length; j++ ) {
+                helix.push( carto.latLonToXYZ( pts[j][0], pts[j][1], CARTO.EARTH_DIAMETER, scale ) );
+            }
+
+            var curve = new THREE.CatmullRomCurve3( helix );
+            var geometry = new THREE.TubeGeometry( curve, helix.length, 0.05, 6, false );
+
+            arcMesh = new THREE.Mesh(geometry, arcMat);
+            gfxScene.add( arcMesh );
+
+            startLL = endLL;
+        }
+
+    }
+
+    function getStormLatLon ( storm ) {
+        var latLon
     }
 
     /**
@@ -179,6 +237,9 @@
         options.year = years[0];
         options.stormLabels = stormLabels[0];
         options.entryLabels = entryLabels[0];
+        options.update = function() {
+            plotStormTrack();
+        };
 
         var gui_year = gfxScene.gui.add(options, "year", years ).name("Year").onChange(function() {
             console.log("Changed year");
@@ -187,7 +248,11 @@
         });
 
         updateStorms( options, options.year );
-        updateEntries( options, storms[0]);
+
+        curStorm = storms[0];
+        updateEntries( options, curStorm);
+
+        gfxScene.gui.add( options, 'update' );
     }
 
     /**
@@ -196,7 +261,7 @@
      * so we just update the location of the eye and set the direction
      * and scale of the arrows
      */
-    function renderFunc ( eyex, eyeY, sampleData ) {
+    function renderHurricane ( eyex, eyeY, sampleData ) {
 
     }
 
