Moved hurricane plotting functionality out of main file and into HurrPlot object.

--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -23,7 +23,8 @@
     <script src="StormParm.js"></script>
     <script src="StormData.js"></script>
     <script src="StormFile.js"></script>
-    /* <script src="HurrGui.js"></script> */
+    <script src="HurrGui.js"></script>
+    <script src="HurrPlot.js"></script>
     <script src="HurrModel.js"></script>
 </head>
 <body>
@@ -33,7 +34,6 @@
     var hurrModel   = undefined;
     var stormFile   = new StormFile();
     var carto = new Carto();
-    var saffirMat = [];
     var stormData = new StormData();
 
     // allocate the Scene object, request orbitControls, some of 3D axes 10 units high and the stats
@@ -44,9 +44,8 @@
         guiWidth:350,
         displayStats:true});
 
-    var hurrGui = new HurrGui( gfxScene.gui, stormFile, plotStormTrack );
-
-    //testArc();
+    var hurrPlot = new HurrPlot( gfxScene );
+    var hurrGui = new HurrGui( gfxScene.gui, stormFile, hurrPlot.plotStormTrack );
 
     // then initialize our demo's stuff
     initializeDemo();
@@ -54,33 +53,21 @@
     // temporary...
     animateScene();
 
-    function testArc() {
-        var startLL = { lat: 48, lon: -122 };
-        var endLL = { lat: 39, lon: -77 };
-
-        var gcGen = new GreatCircle();
-
-        var points = gcGen.generateArc( startLL, endLL, 100, { offset:10, 'name': 'Seattle to DC' });
-    }
-
     /**
      * Initialize the Demo.
      */
     function initializeDemo() {
 
         // Create the mesh onto which we will render the output of the hurricane model
-        createGlobe();
+        hurrPlot.createGlobe();
 
         // now create the model.  It doesn't have any parameters or data - it's
         // just the executable model itself
         hurrModel = new HurrModel({
-
-            renderFunc: renderHurricane
+            renderFunc: hurrPlot.renderHurricane
         });
 
         loadStorms( stormReady );
-
-        createSaffirMat();
     }
 
     /**
@@ -109,122 +96,6 @@
 
         // Start the animation
         animateScene();
-    }
-
-    /**
-     * Create the sphere mesh and wrap it with the image
-     */
-    function createGlobe() {
-        var globe = new THREE.SphereGeometry(2, 32, 32);
-
-        var textureLoader = new THREE.TextureLoader();
-        var bumpLoader = new THREE.TextureLoader();
-        var mat = new THREE.MeshPhongMaterial({color: '#ffffff', transparent: true, opacity: 0.75});
-        textureLoader.load("images/8081-earthmap8k.jpg", function (texture) {
-            mat.map = texture;
-            mat.needsUpdate = true;
-            textureLoader.load("images/8081-earthbump8k.jpg", function (bump) {
-                mat.bumpMap = bump;
-                mat.bumpScale = 0.05;
-
-
-                var mesh = new THREE.Mesh(globe, mat);
-                gfxScene.add(mesh);
-            });
-        });
-
-    }
-
-    function createSaffirMat() {
-
-        for ( var i=0; i<STORMDATA.SAFFIR.length; i++ ) {
-            saffirMat[i] = new THREE.MeshLambertMaterial( {color: STORMDATA.SAFFIR[i].color});
-        }
-    }
-
-    /**
-     * Plot the current storm track by fetching the set of positions and creating
-     * great-circle arcs for each and creating a curve in threee.js for them.
-     *
-     * The procedure is:
-     * - iterate over the storm track entries
-     * - for each pair of points
-     * - calculate the great circle arc, which returns an array of lat/lon [n][2]
-     * - generate the transform of that array into scaled 3D-space as an array of Vector3
-     * - generate a CatMullCurve using three.js
-     * - generate a tube geometry using that curve, returns the resulting geometry
-     */
-    function plotStormTrack( curStorm ) {
-        var gcGen = new GreatCircle();
-        var points;
-        var startLL = { lat: curStorm.entries[0][STORMDATA.LAT], lon: curStorm.entries[0][STORMDATA.LON] };
-        var endLL   = {};
-        var scale = 2 / CARTO.EARTH_DIAMETER;
-        var xyz;
-
-        var saffirCat = stormData.getSaffirCat( curStorm.entries[0][STORMDATA.MAXWIND]);
-        var mat =  saffirMat[saffirCat];
-
-        roundJoin( startLL.lat, startLL.lon, scale, mat );
-
-        console.log(" LL: " + startLL.lat + ", " + startLL.lon);
-
-        for ( var i=1; i<curStorm.entries.length; i++ ) {
-            endLL = { lat: curStorm.entries[i][STORMDATA.LAT], lon: curStorm.entries[i][STORMDATA.LON] };
-
-            saffirCat = stormData.getSaffirCat( curStorm.entries[i][STORMDATA.MAXWIND]);
-            mat =  saffirMat[saffirCat];
-
-            roundJoin( endLL.lat, endLL.lon, scale, mat );
-
-            console.log(" LL: " + endLL.lat + ", " + endLL.lon);
-
-            points = gcGen.generateArc( startLL, endLL, 10, { offset:10 } );
-
-            var pts = points[0];
-            var track = [];
-
-            for ( var j=0; j<pts.length; j++ ) {
-                xyz = carto.latLonToXYZ( pts[j][1], pts[j][0], CARTO.EARTH_DIAMETER, scale ) ;
-                track.push( xyz );
-                console.log("xyz: " + xyz.x.toFixed(2) + " " + xyz.y.toFixed(2) + " " + xyz.z.toFixed(2));
-            }
-
-            var curve = new THREE.CatmullRomCurve3( track );
-            var geometry = new THREE.TubeGeometry( curve, track.length, TRACK_DIA, 32, false );
-
-            var arcMesh = new THREE.Mesh(geometry, mat);
-            gfxScene.add( arcMesh );
-
-            startLL = endLL;
-        }
-    }
-
-    /**
-     * Create a sphere to form the "round join" between sections of the track
-     */
-    function roundJoin( lat, lon, scale, mat ) {
-        var join = new THREE.SphereGeometry(TRACK_DIA, 32, 32);
-
-        xyz = carto.latLonToXYZ( lat, lon, CARTO.EARTH_DIAMETER, scale ) ;
-
-        var mesh = new THREE.Mesh(join, mat);
-        mesh.position.set(xyz.x, xyz.y, xyz.z);
-        gfxScene.add(mesh);
-    }
-
-    function getStormLatLon ( storm ) {
-        var latLon;
-    }
-
-    /**
-     * Called by the hurricane model to have the sample data rendered
-     * In this case, the wind arrows and eye are already in existence
-     * so we just update the location of the eye and set the direction
-     * and scale of the arrows
-     */
-    function renderHurricane ( eyex, eyeY, sampleData ) {
-
     }
 
     /**
