Series of minor updates to get the statistics from the storms.  Not complete, but progress.

--- a/Interpolate.html
+++ b/Interpolate.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Interpolation Demo</title>
-    <link rel="stylesheet" type="text/css" href="css/gfx-scene.css" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"/>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="gfx/math-ext.js"></script>
     <script src="gfx/HttpStatus.js"></script>
+    <script src="gfx/Julian.js"></script>
     <script src="js/StormFile.js"></script>
 </head>
 <body onload="onload()">
@@ -20,31 +20,35 @@
     var     percentOptions;
 
     google.charts.load('current', {'packages':['corechart']});
-    google.charts.setOnLoadCallback(drawChart);
+    //google.charts.setOnLoadCallback(drawChart);
 
     function onload() {
         console.log("onload called");
         stormFile.loadData( "data/hurdat2-1851-2016-041117.json", stormReady, true );
     }
 
-    function stormReady() {
-        percentChart.clearChart();
-        percentChart.draw(percentData, perentOptions);
+    function stormReady( stormFile ) {
+
+        drawChart( stormFile );
     }
 
-    function drawChart() {
-        percentData = new google.visualization.DataTable();
+    function drawChart( stormFile ) {
+        if ( percentData === undefined)
+            percentData = new google.visualization.DataTable();
+        else
+            percentChart.clearChart();
+
         percentData.addColumn('number', 'Year');
         percentData.addColumn('number', '%');
 
         percentOptions = {
-            title: 'Percent Complete Over time',
+            title: 'Percent Missing Over time',
             legend: 'none',
-            width: 450,
+            width: 1500,
             height: 500,
             hAxis: {
                 title: 'Year',
-                ticks: [1852, 64, 96, 128, 160, 192, 224, 2015]
+                ticks: [1852, 1900, 1950, 2016]
             },
             vAxis: {
                 title: '% Complete',
@@ -52,21 +56,28 @@
             }
         };
 
-        percentChart = new google.visualization.LineChart(document.getElementById('percent_div'));
+        var julian = new Julian();
 
-        //updateSlopeData();
+        for ( var i=0; i<stormFile.jsonData.storms.length; i++ ) {
+           storm = stormFile.jsonData.storms[i];
+
+            julianDate = julian.getJulian( storm.entries[0][2], storm.entries[0][1], storm.entries[0][0]) / 365;
+
+            percentData.addRows([
+               [storm.entries[0][0] + julianDate, storm.pc < 1 ? 0.5 : storm.pc ]
+           ]);
+           console.log("Year: " + storm.entries[0][0] + " pcMissing: " + storm.pc + " ID: " + storm.atcID);
+       }
+
+       percentChart = new google.visualization.ColumnChart(document.getElementById('percent_div'));
+
+       percentChart.draw(percentData, percentOptions);
     }
 
 </script>
 
-<table style="width: 900px; height: 500px">
-    <tr>
-        <th>Percent Complete</th>
-    </tr>
-    <tr>
-        <td><div id="percent_div"></div></td>
-    </tr>
-</table>
+<div style="width: 900px; height: 500px" id="percent_div">
+</div>
 
 </body>
 </html>
