--- a/Interpolate.html
+++ b/Interpolate.html
@@ -9,6 +9,7 @@
     <script src="gfx/math-ext.js"></script>
     <script src="gfx/HttpStatus.js"></script>
     <script src="gfx/Julian.js"></script>
+    <script src="js/StormData.js"></script>
     <script src="js/StormFile.js"></script>
 </head>
 <body onload="onload()">
