Checkpoint checkin of the end of the failed experiment with Three.js SplineCurves for interpolation.

--- a/Interpolate.html
+++ b/Interpolate.html
@@ -5,10 +5,14 @@
     <title>Interpolation Demo</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"/>
 
+    <!-- Include several libraries from THREE.js and the Scene class  -->
+    <script src="three-js/three.js"></script>
+
     <script src="gfx/math-ext.js"></script>
     <script src="gfx/HttpStatus.js"></script>
     <script src="gfx/Julian.js"></script>
     <script src="js/StormData.js"></script>
+    <script src="js/TimeSpline.js"></script>
     <script src="js/StormFile.js"></script>
 </head>
 <body>
