Corrected bad paths

--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -16,8 +16,8 @@
     <script src="../gfx/math-ext.js"></script>
     <script src="../gfx/HttpStatus.js"></script>
     <script src="../gfx/gfx-scene.js"></script>
-    <script src="Julian.js"></script>
-    <script src="Carto.js"></script>
+    <script src="../gfx/Julian.js"></script>
+    <script src="../gfx/Carto.js"></script>
     <script src="MetParm.js"></script>
     <script src="StormParm.js"></script>
     <script src="StormJSON.js"></script>
