--- a/Interpolate.html
+++ b/Interpolate.html
@@ -16,6 +16,11 @@
     <script src="js/StormFile.js"></script>
 </head>
 <body>
+<style>
+    .tablelines table, .tablelines td, .tablelines th {
+        border: 1px solid black; padding:10px;
+    }
+</style>
 
 <script>
     var     stormFile   = new StormFile();
