--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -11,7 +11,7 @@
     <script src="../three-js/three.js"></script>
     <script src="../three-js/Detector.js"></script>
     <script src="../three-js/stats.js"></script>
-    <script src="../three-js/dat.gui.js"></script>
+    <script src="../three-js/dat.gui.min.js"></script>
     <script src="../gfx/OrbitControls-Touch-Ortho.js"></script>
     <script src="../gfx/math-ext.js"></script>
     <script src="../gfx/HttpStatus.js"></script>
