--- a/HurrDemo.html
+++ b/HurrDemo.html
@@ -29,21 +29,13 @@
 
 <script>
 
-    // allocate the Scene object, request orbitControls, some of 3D axes 10 units high and the stats
-    var gfxScene = new GFX.Scene( {
-        cameraPos : [4, 3, 4],
-        controls:true,
-        datgui:true,
-        guiWidth:350,
-        displayStats:true});
-
-    var hurrPlot = new HurrPlot( gfxScene );
+    var hurrPlot = new HurrPlot();
 
     // then initialize our demo's stuff
     initializeDemo();
 
     // temporary...
-    animateScene();
+    //animateScene();
 
     /**
      * Initialize the Demo.
@@ -53,23 +45,9 @@
         // Create the mesh onto which we will render the output of the hurricane model
         hurrPlot.createGlobe();
 
+        //hurrPlot.animateScene();
     }
 
-
-    /**
-     * Animate the scene and call rendering.
-     */
-    function animateScene() {
-
-        // Tell the browser to call this function when page is visible
-        requestAnimationFrame(animateScene);
-
-        // tell the hurricane model to update itself and call back to render when it can
-        //hurrModel.timeStep();
-
-        // Map the 3D scene down to the 2D screen (render the frame)
-        gfxScene.renderScene();
-    }
 </script>
 
 </body>
